# sfsgt_scoring

./: .env  .gitignore  Makefile  Pipfile  README.md  crontab.txt  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.sh
.github/workflows/: ci.yml  run_2026.yml
ad_hoc_events/vineyard_cup_2024/: README.md  __init__.py  cli.py  config.py  (+1 more)
app/: run_sfsgt_scoring.py
course_database/: __init__.py  course.py
courses/: __init__.py  course.py  provider.py
data/: courses.py  players.py
docs/: basic_design.md
google_cloud_creds/: .gitignore  README.md
google_sheet/: __init__.py  controller.py  utils.py
sandbox/: proto_birdie_coloring.py
scripts/: check.sh  launchd.plist  lint_check.sh  lint_fix.sh  run.sh  run_scoring_cli.sh  tests.sh
season_common/: player.py  rank.py  scorecard.py
season_config/: __init__.py  config.py
season_controller/: __init__.py  controller.py
season_finale/: __init__.py  finale.py
season_model/: __init__.py
season_view/: __init__.py  google_sheet_view.py
sfsgt_scoring/: course.py  dataframe_utils.py  event.py  handicap.py  handicaps_tahoe_invitational.py  player.py  season.py  season_2023.py  season_runner.py  season_sheet.py  sheets.py
sfsgt_scoring_2023/: README.md  course.py  dataframe_utils.py  event.py  handicap.py  handicaps_tahoe_invitational.py  player.py  season.py  season_2023.py  season_2023_points_config.py  season_sheet.py  sheets.py
src/: course.py  event.py  handicap.py  player.py  season.py
tests/: test_course.py  test_event.py  test_handicap.py  test_player.py  test_season.py
(+306 files in other folders)
